--- a/_posts/2023-10-21-면세점핸드크림-써본사람-써본사람-추천-아침부터-저녁까지-핸드크림-65g-2개.md
+++ b/_posts/2023-10-21-면세점핸드크림-써본사람-써본사람-추천-아침부터-저녁까지-핸드크림-65g-2개.md
@@ -5,6 +5,276 @@ categories: shopping
 tags: [Top10, shopping]
 pin: true
 ---
+<style>
+.product-list-box{
+	display : flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	margin: 20px auto;
+}
+.product-list {
+	width: 220px;
+	background: #fff;
+	box-shadow: rgba(20, 105, 201, 0.09) 0px 4px 14px 0px, rgba(20, 105, 201, 0.12) 0px 2px 4px 0px;
+	margin : 10px;
+	border-radius: 4px;
+	overflow: hidden;
+	text-align: center;
+	position: relative;
+}
+.product-list a{
+  text-decoration : none;
+}
+.product-list:hover{
+	box-shadow: rgba(220, 73, 73, 0.09) 0px 4px 14px 0px, rgba(220, 73, 73, 0.12) 0px 2px 4px 0px;
+}
+.product-list:hover .product-thumb {
+	opacity: 0.5;
+}
+.label-type{
+	width: 43px;
+	height: 43px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding-top : 10px;
+}
+.label-type > p{
+	font-size: 10px;
+	color: #fff;
+	text-align: center;
+	line-height: 1;
+}  
+.hit-label {
+	background: #62b951;
+}
+.new-label {
+	background: #e3db56;
+}
+.sale-label {
+	background: #e36556;
+}
+.sale-label p {
+	padding-top: 2px;
+	margin : 0;
+}
+.add-buttons {
+	position: absolute;
+	z-index: 50;
+	top: 150px;
+	left: 66px;
+	display: none;
+}
+.add-cart {
+	width: 100px;
+	height: 43px;
+	border-radius: 4px;
+	background-color: #e36556;    
+	display: block;
+	font-size : 1em;
+	color : #fff;
+	float: left;
+	cursor: pointer;
+}
+.product-list:hover > a .add-buttons {
+	display: block;
+}
+.product-thumb {
+	border-bottom: 1px solid #ebebeb;
+	cursor: pointer;
+	margin-bottom : 10px;
+}
+.product-price{
+  padding : 5px;
+}
+.product-price h4 {
+	font-size: 1.1em;
+	color: #090B34;
+	margin: 10px 0 20px;
+}
+.product-price p.product-sales-price {
+	font-weight: bold;
+	text-align : center;
+	color: #e36556;
+	margin : 1.2em 0;
+}
+.product-sales-price > s {
+	font-size: 10px;
+	color: rgba(0,0,0,0.2);
+	display: inline-block;
+	margin-left: 8px;
+}
+.product-price p.product-info{
+	text-align : center;
+	font-size : 0.9em;
+	color: #2E2E32;
+}
+</style>
+<h2>감자에 대한 상품 10개 리스트입니다.</h2>
+<div class="product-list-box">
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7485691929&itemId=19564227771&vendorItemId=86409524972&traceid=V0-153-b4f800d5e8cb5c02&clickBeacon=Sn8OgFRP4g8IdrDzZmlelKlJiF%2Bywd8ZifdaOs%2F4VODkVXZ5Tk4kYDpj8XRM2guZHmyS3th%2FhxUV%2Be0rz7oLoD2nCEDOjfMfu8rlTj86KH5SlMPw72VCLMscKfXE9qLbwbltefEHCH13FAZzKn5qTdvL2bF6OXhG%2FyN%2BgB%2Bw%2BZAvoEpq2Hzw0D8Qrn2lZ9vACgojVyKm4qx5E3GVEao1rLOWDG2pnVN5wRPXTAu05%2BNmyntOdS04FAVXS9%2FrtT%2BhqXbOpVT28MskSw6xmt66ACOt6hDERpsW6BZIA3CkoRA%2FfS4GJ08uIyn6slv3s2eapSzbQv61hebDKNqA0H8UrdH4FFoNYBcp%2BpNKlg6KMkm3tV7QSCIM0K7xCrtJWm8CQ9Si6QsxNEYqcRmw2XylurS1L522%2BRkLnMlWBiZYaczsRsumMthTCzaBJhP1spzpk%2FDIJy1md99M21grfJzoGH42aVhPdNsO87Vn9iNfZL%2BDnpuBYJ2y2SS1YnFHPnLEcUUgVTqDKu2rgikHwxQrpPzMzi0x7FhvagkTt5ULFpPpafnDgidEhc%2BsR0B8nng3niuXTPD0imBNWFcZmvG1DTFJhwdPzKCTyiz7i8zqSAwN86DYYxy0jzFojwuxCi7l0%2FExOmYgM0HdxxafvhROeKDi17KdDQcOk906p7T3UiSJM8pKFr7YEz1GZid3payKPRQvUzwOCcI8I373Abzul1CqTSOUTsRGf221vNtEQYUitZKsgPkmuXQlPsHH0rOlJzTUXUvmu1%2Fu6RTimfVU6lwrXDG%2Fg0OAK%2Fyfv1tk3%2FCbsOaDQ25Iv3UfpbCwZn%2BnIFSSxJc18w131d0y2osIiAJWPWhiG29ku9aURHSF9W4Q5TLjPQakngng4ROfyDYs&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="new-label label-type"><p>NEW</p></div>
+	  <div class="product-thumb">
+		<img src="https://img1c.coupangcdn.com/image/vendor_inventory/bd11/98dee8affdfdaba2950fd52fca58effaa6953f7614ed0f1a953e8665b9c9.jpg" width="100%" alt="포슬포슬 햇 수미감자 / 홍감자 3kg 5kg 10kg, 수미감자 중10kg(알감자50~70g), 1개">
+	  </div>   
+	  <div class="product-price">
+		<h4>포슬포슬 햇 수미감자 / 홍감자 3kg 5kg 10kg, 수미감자 중10kg(알감자50~70g), 1개</h4>
+		<p class="product-sales-price">29,900원</p>
+		<p class="product-info">(★4.0 | 리뷰 377)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=6559608761&itemId=6106220729&vendorItemId=73402571401&traceid=V0-153-28f187ff9e53834b&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>20%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image12.coupangcdn.com/image/retail/images/4082543244346719-fa168f97-3bb0-4ed9-a9ac-e16e4165344f.jpg" width="100%" alt="국내산 감자">
+	  </div>   
+	  <div class="product-price">
+		<h4>국내산 감자</h4>
+		<p class="product-sales-price">3,200원<s>3,980원</s></p>
+		<p class="product-info">(★4.5 | 리뷰 118,916)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=6559608761&itemId=14678574381&vendorItemId=81919567997&traceid=V0-153-28f187ff9e53834b&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>27%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image9.coupangcdn.com/image/retail/images/7472211193728463-d042fd37-3ed8-439c-aa5a-695ff5815e06.jpg" width="100%" alt="국내산 감자">
+	  </div>   
+	  <div class="product-price">
+		<h4>국내산 감자</h4>
+		<p class="product-sales-price">1,800원<s>2,450원</s></p>
+		<p class="product-info">(★4.5 | 리뷰 118,915)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7706687523&itemId=20647595987&vendorItemId=86628640399&traceid=V0-153-a258ec313e2e582b&clickBeacon=Sn8OgFRP4g8IdrDzZmlelKlJiF%2Bywd8ZifdaOs%2F4VODkVXZ5Tk4kYDpj8XRM2guZHmyS3th%2FhxUV%2Be0rz7oLoDW%2BTGvLbPHTbztxcKE5HuRSlMPw72VCLMscKfXE9qLbsW29lyt%2BCnrQHN8xt%2BTGyjKUi1t93hKBoBMY6HTiN%2BYvoEpq2Hzw0D8Qrn2lZ9vACgojVyKm4qx5E3GVEao1rLOWDG2pnVN5wRPXTAu05%2BNmyntOdS04FAVXS9%2FrtT%2Bhhb0FZDrJsBJ8q2gFjSW4ETChFwccPEuRjpKOfqDfVcnBHP7hei7SWS8Xt%2BDn5NuVmUbcgnc3YHOIw3oM0B7M8cInwgKpN9WKM02SnDFEAxq8pVtN5GKnkodiDg%2BR9Fir7YOcq0Nw%2Bx0BzR7uuvQSGYHL%2Br4%2BK%2BlVtLuuvy7%2BKS91iDWNKVa6uXbNBxIATsKX1LwJDZdRFBwlU5vLbf0ieILjhKFXws3PCj2QN1H7yLpdcdMq7PmpDBwHn2hpIallKwZwjfOrduMLz6k8HJXhq%2BuJiW4F4Ct9D4Cqtpz%2B1F8sZJc2IsYZKVAOZUiQEI%2BoOf%2FSmNoi2irLv3%2B3kNrTTDfzXmZHKJJU7OQ4wJdLJUCr86VlkS5D9x1WZv6QPzm5gsfRxIBnOFMo1c%2F5HHJaDUx99R7sFKzvfp5gRJQOimXguOuda7kP8L8Wsyd7VywRMtIjjoTMHRTjIr7HFfOrmOLp1b1%2BuSUWSJrcOBuTVOgbGnL9%2FTvjP%2FC7Pp6EyFCJRklK%2FLjcgYh%2BC6f86BcFz42EsTzrPX6SYQSogSh2UbDsGsc0Zmuinwfrg7jhcNlsDFo2muobKW0557tlXLswj%2BaxBjpBcyRLDWJbc3bgno%2BzH%2BRRttXcbsRXzS1urgdk&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="hit-label label-type"><p>HIT</p></div>
+	  <div class="product-thumb">
+		<img src="https://image15.coupangcdn.com/image/vendor_inventory/4587/c005877b2303468c53824f81f663eb4790c0d81a810c8c52a19ee31ed09a.jpg" width="100%" alt="[K품종]국내산 감자 속이 노란 황금 감자 3kg(혼합)">
+	  </div>   
+	  <div class="product-price">
+		<h4>[K품종]국내산 감자 속이 노란 황금 감자 3kg(혼합)</h4>
+		<p class="product-sales-price">13,500원</p>
+		<p class="product-info">(★5.0 | 리뷰 9)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7180952181&itemId=5682902744&vendorItemId=72981781143&traceid=V0-153-56ab66575dc941f6&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>3%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image6.coupangcdn.com/image/retail/images/1124051338995339-a6fdc568-8703-4180-b7f9-e8c113a218b8.jpg" width="100%" alt="곰곰 감자">
+	  </div>   
+	  <div class="product-price">
+		<h4>곰곰 감자</h4>
+		<p class="product-sales-price">16,000원<s>16,500원</s></p>
+		<p class="product-info">(★4.5 | 리뷰 208,393)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7711971484&itemId=20675068117&vendorItemId=87747295352&traceid=V0-153-fd6efc821ef68726&clickBeacon=Sn8OgFRP4g8IdrDzZmlelKlJiF%2Bywd8ZifdaOs%2F4VODkVXZ5Tk4kYDpj8XRM2guZHmyS3th%2FhxUV%2Be0rz7oLoGoy%2FdLfrJLS8JTYdeFgzCdSlMPw72VCLMscKfXE9qLbvcyP2RPjIE3YNDesTQ8%2BZjaKheS%2FZk%2FBzHJxqfvXMSEvoEpq2Hzw0D8Qrn2lZ9vACgojVyKm4qx5E3GVEao1rLOWDG2pnVN5wRPXTAu05%2BNmyntOdS04FAVXS9%2FrtT%2BhI%2FakPHTABMdKERvYaB1yseDiFZEBbS0UTpkIAWB%2BQR9jUhO17cZj8xKZf8iyEa83mUbcgnc3YHOIw3oM0B7M8SNdCsHOB3rSB3%2FBgq30FukPiN8WJAIajEQsAv%2FAS6nT7YOcq0Nw%2Bx0BzR7uuvQSGVLoBiNrFAOHBQ2oE2KR0fdo1sNSp%2Fzy6M7TAGSm%2BpWpVtvAHzWJ1hlUyNW1DvQJ7aRs3qom%2BCPkG82emGsT%2Basi0TTWKcGVxhOK%2FpRezi3m8s0Bf9KRlOt5cyZKi6zvcRO2Kj1XGQvt%2F%2Bak4dHE9XXQga1GwQP%2B4DANKdqrz99QxjbK8sb994HmOeZYfCEEV5xF%2FawDh0x61vulkFjj7u6ikQTkUyFgAptXZLdKjnAkNqEeVKr5m0Kn6GeoaLxhe0SSYKluLIeXIkGnogFtHRSA%2FUuwGxiV7YSNElgmxZPk%2FLH%2B1mPZDl8krdLmd1Ra%2FSmwUD9B6oRRQzAblJk%2BU%2BSSkt53VAGkE%2FYvn4FAKpRr25vI5DYLmRRPOMiT2cK86B6DSP%2FQR3TtvfQjjqNUousdcZw5OyoQN6vXsfWm%2B0y3HNh2YBxIQcYbsK71100hQK2ilFOAGrl%2F07sW1m0sfyMhlMLyWkmZtYwdeFmCFQ%2Fo&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>12%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image6.coupangcdn.com/image/vendor_inventory/b607/c77442b5642cde440399c1bba9c0a1546a945c710af2a7b2fc016112d3d7.jpg" width="100%" alt="단감 5kg 35~40과 내외 외, 1개">
+	  </div>   
+	  <div class="product-price">
+		<h4>단감 5kg 35~40과 내외 외, 1개</h4>
+		<p class="product-sales-price">14,830원<s>16,900원</s></p>
+		<p class="product-info">(★3.0 | 리뷰 2)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7334967485&itemId=18839523519&vendorItemId=75483469656&traceid=V0-153-472396be1b2d0f39&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>38%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image7.coupangcdn.com/image/vendor_inventory/2ca9/09d8e7f9e39c1ff3bc842d3c39478b9e93358764f76162c639f6f20b6f3b.jpg" width="100%" alt="[대용량] 포근포근 23년산 감자 10kg 20kg 중/대/특/왕특">
+	  </div>   
+	  <div class="product-price">
+		<h4>[대용량] 포근포근 23년산 감자 10kg 20kg 중/대/특/왕특</h4>
+		<p class="product-sales-price">17,890원<s>28,900원</s></p>
+		<p class="product-info">(★3.5 | 리뷰 10,339)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7404930732&itemId=19174034299&vendorItemId=86272469866&traceid=V0-153-da288111afbbccc3&clickBeacon=Sn8OgFRP4g8IdrDzZmlelKlJiF%2Bywd8ZifdaOs%2F4VODkVXZ5Tk4kYDpj8XRM2guZHmyS3th%2FhxUV%2Be0rz7oLoDCn90d%2BmM3YWsbXjBGzrEBSlMPw72VCLMscKfXE9qLbkXVsWOKktDdwSWRBMmhnLFhN9tjOTEcnJeRB7%2BkkygUvoEpq2Hzw0D8Qrn2lZ9vACgojVyKm4qx5E3GVEao1rLOWDG2pnVN5wRPXTAu05%2BNmyntOdS04FAVXS9%2FrtT%2BhNDATSIBjqf5F9oCVFCDYVWEcD4uHFMcl%2FCyT00Ur3gwJKCzG4DSDxoYcjhDiBHHJmUbcgnc3YHOIw3oM0B7M8ZlY%2BZM%2BLZLc9xtR9YpQbuXdR3ofULOzLKFeGx5NJ5az7YOcq0Nw%2Bx0BzR7uuvQSGeIoTuRMGCq5zPYPN5dr%2BtwANtTChGPN9m%2BCLL4sHt%2BVDqrl4AwhLC7QJUZTpm1QYaRs3qom%2BCPkG82emGsT%2Basi0TTWKcGVxhOK%2FpRezi3m8s0Bf9KRlOt5cyZKi6zvcRO2Kj1XGQvt%2F%2Bak4dHE9XXQga1GwQP%2B4DANKdqrz99QxjbK8sb994HmOeZYfCEEV5xF%2FawDh0x61vulkFjj7u6ikQTkUyFgAptXZLdKjnAkNqEeVKr5m0Kn6GeoaLxhe0SSYKluLIeXIkGnogFtHRSA%2FUuwGxiV7YSNElgmxZPk%2FLH%2B1mPZDl8krdLmd1Ra%2FSmwUD9B6oRRQzAblJk%2BU%2BSSkt53VAGkE%2FYvn4FAKpRr25vI5DYLmRRPOMiT2cK86B6DSP%2FQR3TtvfQjjqNUousdcZw5OyoQN6vXsfWm%2B0y3HNh2YBxIQcYbsK71100hQK2ilFOAGrl%2F07sW1m0sfyMhlMLyWkmZtYwdeFmCFQ%2Fo&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>46%</p></div>
+	  <div class="product-thumb">
+		<img src="https://image6.coupangcdn.com/image/vendor_inventory/0c5e/80b45964d756b725ebc21b9a8df13de6222f32890f649b8a6647890241d8.jpg" width="100%" alt="제철 국내산 햇 수미감자 흙감자 3kg 5kg 10kg">
+	  </div>   
+	  <div class="product-price">
+		<h4>제철 국내산 햇 수미감자 흙감자 3kg 5kg 10kg</h4>
+		<p class="product-sales-price">12,900원<s>23,900원</s></p>
+		<p class="product-info">(★4.0 | 리뷰 1)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7159181290&itemId=20262347007&vendorItemId=3097848808&traceid=V0-153-9b0ffa151e281e55&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="sale-label label-type"><p>SALE<br/>63%</p></div>
+	  <div class="product-thumb">
+		<img src="https://img4c.coupangcdn.com/image/vendor_inventory/d364/6c433dc1e1ddb468647b8f9a6bd77248960f8d62e50b0d9aa0899727dfa1.jpg" width="100%" alt="국내산 햇감자">
+	  </div>   
+	  <div class="product-price">
+		<h4>국내산 햇감자</h4>
+		<p class="product-sales-price">10,960원<s>29,900원</s></p>
+		<p class="product-info">(★4.0 | 리뷰 13,589)</p>
+	  </div>
+	</a>
+	</div>
+	<div class="product-list">
+	<a href="https://link.coupang.com/re/AFFSDP?lptag=AF9450613&subid=navercafe1&pageKey=7318280759&itemId=18764300026&vendorItemId=70531672600&traceid=V0-153-6ec6b149e046bccd&clickBeacon=Sn8OgFRP4g8IdrDzZmlelKlJiF%2Bywd8ZifdaOs%2F4VODkVXZ5Tk4kYDpj8XRM2guZHmyS3th%2FhxUV%2Be0rz7oLoLg3YTsv14xSi%2BArqxQzG0O6BzFCxapxV2dW63EE8cgkqkHHi5YeJVMGzxdPzvoNdkigsQOHEgVbNvCmc5Aq2FsvoEpq2Hzw0D8Qrn2lZ9vACgojVyKm4qx5E3GVEao1rLOWDG2pnVN5wRPXTAu05%2BNmyntOdS04FAVXS9%2FrtT%2BhtLB17nrr%2BMgREIcw1%2FcgeNeWGFYpdcYgyzQe0q0Aw4DGH2vfgBd3cAQz6PfwKUXqdWtdFRw2p%2FXOflNnuhYXk02qlw9DTpz8xVKiiuGM4zRlTJFDGHq2q6A%2BFez%2FWfOhIcgbctCyz6pLpwDmHian26tyGk5F3yxEPKSUinGCpIvalueHdD0du6hgbmNlE%2Bl3RYOwVEtQ5Bq%2FNgukwnbB9fzMzi0x7FhvagkTt5ULFpPpafnDgidEhc%2BsR0B8nng3pdyf%2BlrW%2B6pH0%2Fs0XJSXvz65rlL4BSnJVDTbXSMCrCyBUJjMDVaIF9jLwIQMF4yrlgvxXcElqDTvMzIBNkgWpo9G%2FV%2BcyMIf7QKg40l2%2BTBpZjKmhmR3tXT%2BOxRYbE5tkW8E3cKJUmReV0dElip7vG%2BTs2n13b2blSbP93Pkir1zRBB2PaIRIiCLuPernSp3Mha%2Bw0CKysaEBw2FCfbFXcEXnLk0CpQCwnOxiAw8bLE6x3L6x6nwdEcLnC4ulFLE3G6BKPuBLGnOQd1gEBCKr6DEgkvtFBf049p513kTqwIKnt3Dv84fKuvX9Y9%2BpxZuP1rgCKluxzpC6hwexW8SPBtUVHqLazOPbwiCBtw%2BaCxhEPzeu3MLJm2nYk5pF9LA&requestid=20231124204135317148191586&token=31850C%7CMIXED" target="_blank" rel="sponsored nofollow">
+	  <div class="add-buttons">
+		<button type="button" class="add-cart">후기보기</button>
+	  </div>
+	  <div class="new-label label-type"><p>NEW</p></div>
+	  <div class="product-thumb">
+		<img src="https://image5.coupangcdn.com/image/vendor_inventory/4074/90494c7c65691811bc099f8af7ab7c75b41576bba5731405b3b6351ef43b.jpg" width="100%" alt="2023년 햇수미감자(특), 1개, 5kg(특)">
+	  </div>   
+	  <div class="product-price">
+		<h4>2023년 햇수미감자(특), 1개, 5kg(특)</h4>
+		<p class="product-sales-price">17,400원</p>
+		<p class="product-info">(★4.5 | 리뷰 10)</p>
+	  </div>
+	</a>
+	</div>
+</div>
+				
+
 
 > ##### 해당 게시물에서는 [**분석도구**](https://itemscout.io/)를 이용하여 **성별**, **연령별** 등의 데이터를 바탕으로 [**상품**](https://link.coupang.com/a/baae76)들을 추천해드리고 있습니다.
 <div class="container"><div class="row">
